refactor : getKoks 메서드 리팩토링
1. getKoks에서 dto mapping 코드가 너무 난잡함.
2. getKoks 메서드에서 dto mapping 까지 하면 책임이 너무 크다고 판단
3. GetKokResponse dto에 of static 메서드를 만들어서 복잡한 로직을 dto에게 전가